--- a/Public/index.html
+++ b/Public/index.html
@@ -79,14 +79,14 @@
 <script>
 	// For Firebase JS SDK v7.20.0 and later, measurementId is optional
 	const firebaseConfig = {
-		apiKey: "AIzaSyD1lnxJCNPG06Pl6iTjtKs_xZUrour-09E",
-		authDomain: "collectors-mod.firebaseapp.com",
-		databaseURL: "https://collectors-mod-default-rtdb.asia-southeast1.firebasedatabase.app",
-		projectId: "collectors-mod",
-		storageBucket: "collectors-mod.firebasestorage.app",
-		messagingSenderId: "807927314031",
-		appId: "1:807927314031:web:aeb4060bb93a6c34be3f9a",
-		measurementId: "G-N1NL4PD5SW"
+		apiKey: "AIzaSyBMCBeERysLswlRtDm_KvcMv3QwMkG1Fro",
+  authDomain: "auth-01-9d6dd.firebaseapp.com",
+  databaseURL: "https://auth-01-9d6dd-default-rtdb.firebaseio.com",
+  projectId: "auth-01-9d6dd",
+  storageBucket: "auth-01-9d6dd.firebasestorage.app",
+  messagingSenderId: "734434124091",
+  appId: "1:734434124091:web:f9bc30be2163e04c44171e",
+  measurementId: "G-QSPKJXQ8HC"
 	};
 	firebase.initializeApp(firebaseConfig);
 	
